First issue with tiny gap underneath homepage image

--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -1,5 +1,6 @@
 .homepage-title-image {
   width: 100%;
+  display: block;
 }
 .homepage-row {
   display: flex;
